# unix-env-programming

./: .gitignore  CMakeLists.txt  main_2.c  university_classes_notes.tex
Debug/: backward  cat1  class_1_test  copy1  data_passer  dictionary_counter  i_said_more_pipes  tail  unix_env_programming
Debug/class_1/: manage_err  sys_conf
Debug/class_4/: my_shell  save
Debug/class_5/: cond  hello  rand_search  sum  synch
Debug/class_7/: .README  dictionary_counter  i_said_more_pipes  pipe_and_dup  simple_pipe
class_1/managing_err/: Makefile  manage_err.c
class_1/sys_conf/: ex2sysconf.sh  sys_conf_generated.c  sysconf.list.txt
class_2/: backward.c  cat1.c  copy1.c  tail.c
class_4/: funcs.c  funcs.h  shell.c
class_4/process_limits/: save.c
class_4/shell/: shell.c
class_5/cond_var/: cond.c
class_5/hello/: hello.c
class_5/sum/: sum.c  sum.h
class_5/synchronization/: synch.c  synch.h
class_5/thread_canceling/: random_search.c  random_search.h
class_7/data_passer/: data_passer.cpp  data_passer.h
class_7/dictionary_counter/: dictionary_counter.cpp  dictionary_counter.h
class_7/i_want_more_pipes/: i_said_more_pipes.cpp  i_said_more_pipes.h
class_7/pipe_and_dup/: pipe_and_dup.cpp
class_7/simple_pipe/: simple_pipe.cpp
